--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
+    "react-typing-effect": "^2.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
